# litethinking

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  build.sh  pyproject.toml  render.yaml  sonar-project.properties  start.sh
backend/apps/: __init__.py  permissions.py
backend/apps/auditoria/: admin.py  apps.py  models.py  repositories.py  serializers.py  signals.py  urls.py  use_cases.py  views.py
backend/apps/auditoria/migrations/: 0001_initial.py
backend/apps/auditoria/tests/: test_auditoria.py
backend/apps/authentication/: admin.py  apps.py  backends.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/apps/authentication/management/commands/: crear_admin.py
backend/apps/authentication/migrations/: 0001_create_groups.py
backend/apps/authentication/tests/: test_auth.py
backend/apps/dashboard/: urls.py  use_cases.py  views.py
backend/apps/empresas/: admin.py  models.py  pdf.py  repositories.py  serializers.py  urls.py  use_cases.py  views.py
backend/apps/empresas/management/commands/: seed_data.py
backend/apps/empresas/migrations/: 0001_initial.py
backend/apps/empresas/tests/: test_inventario.py  test_views.py
backend/apps/productos/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  signals.py  urls.py  use_cases.py  views.py
backend/apps/productos/management/commands/: cargar_tasas.py
backend/apps/productos/migrations/: 0001_initial.py  0002_add_embedding.py  0003_add_cantidad.py  0004_add_consulta_producto.py
backend/apps/productos/tests/: test_views.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
docs/: architecture.md  decisiones-tecnicas.md  despliegue.md  funcionalidad-ia.md
domain/: README.md  pyproject.toml
domain/domain/: __init__.py
domain/domain/entities/: __init__.py  bloque_auditoria.py  empresa.py  precio.py  producto.py
domain/tests/: test_bloque_auditoria.py  test_empresa.py  test_producto.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
microservices/ai-agent/: .env.example  build.sh  config.py  database.py  main.py  models.py  pyproject.toml  render.yaml  start.sh
microservices/ai-agent/routers/: agente.py
microservices/ai-agent/scripts/: vectorizar_productos.py
microservices/ai-agent/services/: cache.py  embeddings.py  rag.py
microservices/ai-agent/tests/: conftest.py  test_agente.py
(+35 files in other folders)
