[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Application + infrastructure layer (Django + DRF)"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14"
psycopg2-binary = "^2.9"
django-environ = "^0.11"
django-cors-headers = "^4.3"
domain = {path = "../domain", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.7"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
