[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent microservice — RAG with pgvector"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
python-decouple = "^3.8"
domain = {path = "../../domain", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
