[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent microservice — RAG with pgvector"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
openai = "^1.0"
langchain = ">=0.1"
langchain-openai = ">=0.1"
langchain-core = ">=0.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pgvector = "^0.3"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
domain = {path = "../../domain", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.25"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

